@@ -13,6 +13,7 @@ New features:
 - 3488688 Don't spawn logger for clients
 - 3493493 Add sfcbsem
 - 3495060 Verify filter and handler information during subscription
+- 3498932 Implement ModifyInstance for CIM_ListenerDestination
 
 Bugs fixed: 
 
